# EdgeVision_Compress

./: .gitignore  README.md  conftest.py  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: benchmark.yaml  distill.yaml  prune.yaml  prune_structured.yaml  quantize.yaml  train.yaml
configs/compression/: pruning.yaml
configs/data/: mvtec.yaml
configs/model/: resnet50.yaml
data/: mvtec.dvc
demo/: app.py  requirements.txt
notebooks/: 01_data_exploration.ipynb
scripts/: benchmark_all.py  distill.py  download_mvtec.py  edge_deploy.py  export_demo.py  prune_structured.py  prune_unstructured.py  quantize.py  train_baseline.py
src/benchmark/: __init__.py  latency.py  onnx_runtime.py
src/compression/: __init__.py
src/compression/distillation/: __init__.py  loss.py  trainer.py
src/compression/pruning/: __init__.py  finetuner.py  flops.py  magnitude.py  structured.py
src/compression/quantization/: __init__.py  ptq.py  qat.py
src/data/: __init__.py  cutpaste.py  mvtec.py  transforms.py
src/evaluation/: metrics.py
src/models/: __init__.py  mobilenet.py  resnet.py
src/training/: trainer.py
src/utils/: __init__.py  logging_config.py  seed.py
tests/: __init__.py  test_benchmark.py  test_data.py  test_demo.py  test_distillation.py  test_edge_deploy.py  test_model.py  test_pruning.py  test_quantization.py  test_scaffold.py  test_structured_pruning.py
